# gamejam

./: .gitignore  .gitmodules  GAMES.txt  README  gamejam  gamejam_static  gamejam_tpl  mount.sh  theme.sh
BGJ01/: .gitignore  CMakeLists.txt  Makefile  theme_generator.py
BGJ01/data/: DejaVuSans.fontdef
BGJ01/src/: AircraftComponent.cpp  AircraftComponent.hpp  BotControlComponent.cpp  BotControlComponent.hpp  CannonBallComponent.cpp  CannonBallComponent.hpp  CannonComponent.cpp  CannonComponent.hpp  Enums.cpp  Enums.hpp  GameState.cpp  GameState.hpp  PlayerControlComponent.cpp  PlayerControlComponent.hpp  Test.cpp  Test.hpp  WorldComponent.cpp  WorldComponent.hpp  main.cpp
BGJ02/: LICENSE  Makefile  README.md  theme-list
BGJ02/lib/: get_title.lua  package.sh
BGJ02/src/: arena.lua  asteroid.lua  asteroidexplosion.lua  bullet.lua  conf.lua  credits.lua  entity.lua  explosion.lua  game.lua  intro.lua  label.lua  main.lua  menu.lua  polygonentity.lua  powerup.lua  ship.lua  ship_ai.lua  ship_player.lua  shipexplosion.lua  toast.lua  world.lua
BGJ03/: LICENSE  README.md  index.html  style.css  theme-list
BGJ03/gfx/: biggear.psd  gun.psd  idle.psd  idleleft.psd  idleright.psd  playerleft.psd  playerright.psd  tileset.psd
BGJ03/js/: blast.js  box.js  decogear.js  gamvas.js  general.js  gun.js  key.js  loader.js  main.js  player.js  textactor.js  tile.js  tilebox.js  wind.js
BGJ03/levels/: above.json  above.tmx  final.json  final.tmx  level0.json  level0.tmx  level1.json  level1.tmx  level2.json  level2.tmx  level3.json  level3.tmx  level4.json  level4.tmx  level5.json  level5.tmx  level6.json  level6.tmx  level7.json  level8.json  level8.tmx  secondkey.json  secondkey.tmx  test.json  test.tmx  tube.json  tube.tmx
BGJ05/: LICENSE  README.md  theme-list
BGJ05/src/: conf.lua  main.lua
BGJ06/: index.html  theme-list
BGJ06/lib/: ParticleEngine.js
BGJ06/src/: building.js  city.js  enemy.js  entity.js  game.js  main.js  shot.js  sound.js  tank.js
BGJ07/: .gitignore  CMakeLists.txt  Makefile
BGJ07/src/: box.cpp  box.hpp  debugDraw.cpp  debugDraw.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  entityMotionState.cpp  entityMotionState.hpp  game.cpp  game.hpp  main.cpp  map.cpp  map.hpp  player.cpp  player.hpp  renderHelper.cpp  renderHelper.hpp  resources.cpp  resources.hpp  sonar.cpp  sonar.hpp  world.cpp  world.hpp
BGJ07/src/helper/: errorHelper.cpp  errorHelper.hpp  renderHelper.cpp  renderHelper.hpp  resources.hpp
BGJ08/: Cargo.toml  Makefile
BGJ08/src/: component.rs  enemy.rs  entity.rs  main.rs  player.rs
GGJ2011/: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  TODO  license.txt
GGJ2011/cmake-extras/: FindBullet.cmake
GGJ2011/data/: level-0.info  level-1.info  level-10.info  level-2.info  level-3.info  level-4.info  level-5.info  level-6.info  level-7.info  level-8.info  level-9.info  levels.info
GGJ2011/data/gfx/psd/: selector.pdd
GGJ2011/data/gfx/tga/: tileset.xcf  trak2_panel1d.tga  trak2_trim4b.tga  trak2_trim4e.tga  trak2_wall1b.tga
GGJ2011/data/tiled_maps/: level02.tmx  level06.tmx  level08.tmx  level09.tmx  level10.tmx  level2.tmx  level5.tmx  raw.tmx
GGJ2011/gfx/tga/: trak2_panel2d.tga
GGJ2011/packaging/: AUTHORS  ai-and-the-bomb.wxs  bin-files.wxs  data-files.wxs  files.wxs  make_win32_package.sh
GGJ2011/packaging/data/: ai-and-the-bomb.rc  level-1.info  level-10.info  level-2.info  level-9.info
GGJ2011/packaging/data/tiled_maps/: level01.tmx  level03.tmx  level04.tmx  level07.tmx  level08.tmx  level10.tmx  titlescreen.tmx
GGJ2011/src/: AnimatedSprite.cpp  AnimatedSprite.hpp  CollisionPolygon.cpp  CollisionPolygon.hpp  Coordinates.cpp  Coordinates.hpp  DebugDraw.hpp  Definitions.hpp  Entity.cpp  Entity.hpp  GameApp.cpp  GameApp.hpp  GameObject.cpp  GameObject.hpp  Mover.cpp  Mover.hpp  MusicManager.cpp  MusicManager.hpp  Rail.cpp  Rail.hpp  ResourceManager.cpp  ResourceManager.hpp  TextMessage.cpp  TextMessage.hpp  TiledSprite.cpp  TiledSprite.hpp  Vector2D.hpp  World.cpp  World.hpp  main.cpp
GGJ2013/: .gitignore  Makefile  README.md  build.bat  game.love
GGJ2013/data/: .~lock.GGD(Gamejam13).odt#  GGD(Gamejam13).odt
GGJ2013/levels/: test0.lua  test0.tmx
GGJ2013/lib/: package.sh  run.sh
GGJ2013/src/: conf.lua  intro.lua  main.lua  vector.lua
GGJ2014/: README.md  awesome_color.dart  branch.dart  clock.dart  debug.dart  environment.dart  eye_toggle.dart  game.dart  global.dart  human_event.dart  index.html  leaf.dart  math.dart  pubspec.yaml  pulse.dart  raindrop.dart  spline.dart  wind.dart
LD15/: main.py  music.mmpz  vec2d.py
RGJ01/: Makefile  README  theme_generator.py
RGJ01/gfx/: background.xcf  foreground.xcf
RGJ01/src/: Asteroid.cpp  Asteroid.hpp  AsteroidManager.cpp  AsteroidManager.hpp  GameApp.cpp  GameApp.hpp  Ship.cpp  Ship.hpp  Star.cpp  Star.hpp  StarfieldManager.cpp  StarfieldManager.hpp  main.cpp
RGJ02/: README  setup.py  theme_generator.py
RGJ02/src/: gloss.py  main.py
RGJ03/: theme_generator.py
RGJ04/: Makefile  README  theme_generator.py
RGJ05/: .gitignore  CMakeLists.txt  Makefile  README  theme_generator.py
RGJ06/: .gitignore  CMakeLists.txt  Makefile  README  theme_generator.py
RGJ06/src/: Background.cpp  Background.hpp  Blob.cpp  Blob.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EntityAttachment.cpp  EntityAttachment.hpp  GameApp.cpp  GameApp.hpp  Particle.cpp  Particle.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Path.cpp  Path.hpp  Photon.cpp  Photon.hpp  Player.cpp  Player.hpp  ResourceManager.cpp  ResourceManager.hpp  RestraintSettings.cpp  RestraintSettings.hpp  Vector2D.cpp  Vector2D.hpp  World.cpp  World.hpp  main.cpp
django-site/: README
minijam1/: Makefile  package-lock.json
pre-GGJ2013/: arena.cpp  arena.hpp  cutie.cpp  cutie.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  ideas.txt  main.cpp  mainwindow.h  pre-GGJ2013.pro  resources.qrc  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp
project/: django.wsgi  settings.py  urls.py
templates/: base.html  home.html  jam_index.html
(+269 files in other folders)
